clean code
Signed-off-by: Karim Taam <karim.t2am@gmail.com>